Fix inconsistent vertical spacing around blockquotes (#213)
* fix: inconsistent spacing for blockquotes (#212)

* chore: update changelog

--- a/src/theme-src/css/admonitions.css
+++ b/src/theme-src/css/admonitions.css
@@ -3,7 +3,7 @@
  * **************************/
 
 blockquote {
-  @apply text-sm px-4 border border bg-gray-100 border-l-4;
+  @apply text-sm my-6 px-4 border border bg-gray-100 border-l-4;
   & .attribution {
     @apply italic;
   }
